[gd_scene load_steps=2 format=3 uid="uid://domhq2w6km5vu"]

[ext_resource type="Script" path="res://ServerSelectionUI.gd" id="1_server_ui"]

[node name="ServerSelectionUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_server_ui")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Available Game Servers"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ServerList" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ShowLogButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Show Scan Log"

[node name="RefreshButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Refresh"

[node name="ConnectButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Connect to Selected"
disabled = true

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Cancel"

[node name="ScanningLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Scanning for servers..."
horizontal_alignment = 1
visible = false